syntax = "proto3";
import "tagger/tagger.proto";
option go_package = "github.com/elnosh/gonuts/cashurpc";


message KeysResponse{
  repeated Keyset keysets = 1 [(tagger.tags) = "json:\"keysets\""];
}
message KeysRequest{

}

message Keyset {
  string id = 1;
  string unit = 2;
  string mint_url = 3;
  bool active = 4;
  map<uint64, string> keys = 5;
}
